fixed some issues on mobile. They included removing the placeholder for the time input on the planner page since it makes the time not legible on iOS devices, showing pictures of places on the results page, and making the underlines for the input fields in the login page the same length.

--- a/src/components/styles/Miami2.css
+++ b/src/components/styles/Miami2.css
@@ -1561,6 +1561,8 @@ width: 40%;
         width: 5.1rem;
     }
     #filteredResults_List .results-img img {
+        height: 100%;
+        width: 100%;
         opacity: 1;
 
     }
