--- a/src/components/styles/login.css
+++ b/src/components/styles/login.css
@@ -194,7 +194,6 @@ width: 70vw;
 font-size: 16px;
 }
 #passwordfield-login {
-    width: 93%;
     font-size: 16px;
 }
 #NoAcc {
